[package]
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2018"
name = "provok"
version = "0.1.0"

[dependencies]
allsorts = "0.5.1"
clap = "2.33.3"
euclid = "0.22.2"
failure = "0.1.8"
freetype = "0.7.0"
glium = "0.29.0"
harfbuzz-sys = "0.5.0"
lingua = "1.2.0"
log = "0.4.14"
palette = "0.5.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
