[package]
authors = ["o2sh <ossama-hjaji@live.fr>"]
description = "Text Renderer"
edition = "2018"
exclude = ["resources/*"]
license = "MIT"
name = "provok"
readme = "README.md"
repository = "https://github.com/o2sh/provok"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
euclid = "0.22.4"
freetype = "0.7.0"
glium = "0.30.0"
harfbuzz-sys = "0.5.0"
libc = "0.2.94"
log = "0.4.14"
palette = "0.5.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
thiserror = "1.0"
ttf-parser = "0.12.0"
